syntax = "proto3";

package pessoa;

option java_package = "br.com.jh.stubs";
option java_multiple_files = true;

service ConsultaPessoa {
	rpc FindByCpf (PessoaRequest) returns (PessoaResponse);
	rpc FindByNome (PessoaRequest) returns (ListaPessoaResponse);
	rpc FindAll (Empty) returns (ListaPessoaResponse);
}

message Empty {}


message PessoaRequest {
	string nome = 1;
	string cpf = 2;
}

message PessoaResponse {
	int32 id = 1;
	string nome = 2;
	string nascimento = 3;
	string fone = 4;
	string endereco = 5;
	string cpf = 6;
}

message ListaPessoaResponse {
	repeated PessoaResponse listaPessoas = 1;
}